@@ -7,6 +7,7 @@ Griffith ChangeLog
 
 2008-11-15  Piotr Ożarowski
 	* Export plugins are now exporting movies listed in main window
+	* Replace "by ..." quick filter combo boxes with saved search conditions
 
 2008-11-13  Piotr Ożarowski
 	* update translations
